--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.6.2",
     "react": "16.6.1",
     "react-native": "0.57.5",
+    "react-native-dotenv": "^0.2.0",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2"
