--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
+    "@types/mapbox": "^1.6.38",
+    "@types/mapbox-gl": "^0.51.1",
     "@types/react-redux": "^6.0.10",
     "@types/redux-saga": "^0.10.5",
     "prop-types": "^15.6.2",
