--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,8 @@
     "react-native-dotenv": "^0.2.0",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
-    "redux-saga": "^0.16.2"
+    "redux-saga": "^0.16.2",
+    "util": "^0.11.1"
   },
   "devDependencies": {
     "@types/jest": "^23.3.10",
