--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "Pathify server",
   "scripts": {
-    "build": "mkdir dist 2>/dev/null; tsc; cp -R src/config dist; echo 'done building to /dist'",
-    "start": "NODE_ENV=development nodemon --watch src -e ts --exec 'yarn build; yarn run run'",
-    "run": "NODE_ENV=development node dist/server.js",
-    "test": "NODE_ENV=development mocha ./dist/test/*.js"
+    "build": "mkdir dist 2>/dev/null; tsc; cp -R src/config dist; echo 'built to /server/dist'",
+    "launch": "NODE_ENV=development node dist/server.js",
+    "test": "NODE_ENV=development mocha dist/test/*.js",
+    "start": "echo \"launching nodemon, watching src...\"; NODE_ENV=development nodemon --watch src -e ts --exec 'echo \"rebuilding server...\"; yarn build; echo \"running tests...\"; yarn test; echo \"relaunching server...\"; yarn launch'"
   },
   "author": "Jonathan Dubman",
   "license": "ISC",
