--- a/server/package.json
+++ b/server/package.json
@@ -45,6 +45,7 @@
     "microtime": "^2.1.8",
     "minimist": "^1.2.0",
     "mocha": "^5.1.1",
+    "module-alias": "^2.1.0",
     "mongodb": "^3.0.7",
     "node-fetch": "^2.1.2",
     "nodemon": "^1.17.4",
@@ -56,5 +57,10 @@
     "uuid": "^3.2.1",
     "winston": "^2.4.2",
     "xml2js": "^0.4.19"
+  },
+  "_moduleAliases": {
+    "lib": "dist/lib",
+    "routers": "dist/routers",
+    "test": "dist/test"
   }
 }
