Ability to share code across app, server and web, using shared project at top level, and manually invoked package.json script to copy shared code across projects

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -57,6 +57,9 @@
         "routers/*": [
             "src/routers/*"
         ],
+        "shared/*": [
+            "src/shared/*"
+        ],
         "test/*": [
             "src/test/*"
         ]
