--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "build": "mkdir dist 2>/dev/null; tsc; cp -R src/config dist; echo 'built to /server/dist'",
     "launch": "NODE_ENV=development node dist/server.js",
     "test": "NODE_ENV=development mocha dist/test/*.js",
-    "start": "echo \"launching nodemon, watching src...\"; NODE_ENV=development nodemon --watch src -e ts --exec 'echo \"rebuilding server...\"; yarn build; echo \"running tests...\"; yarn test; echo \"relaunching server...\"; yarn launch'"
+    "start": "echo \"launching nodemon, watching src...\"; NODE_ENV=development nodemon --watch src -e ts,json5 --exec 'echo \"rebuilding server...\"; yarn build; echo \"running tests...\"; yarn test; echo \"relaunching server...\"; yarn launch'"
   },
   "author": "Jonathan Dubman",
   "license": "ISC",
@@ -16,16 +16,15 @@
     "@types/chai": "^4.1.3",
     "@types/chai-as-promised": "^7.1.0",
     "@types/config": "^0.0.34",
-    "@types/dotenv": "^4.0.3",
+    "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
-    "@types/jsonwebtoken": "^7.2.7",
+    "@types/jsonwebtoken": "^8.3.0",
     "@types/microtime": "^2.1.0",
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^5.2.1",
     "@types/mongodb": "^3.0.18",
     "@types/node": "^10.3.2",
     "@types/node-fetch": "^2.1.1",
-    "@types/winston": "^2.3.9",
     "@types/xml2js": "^0.4.3",
     "aws-sdk": "^2.253.1",
     "body-parser": "^1.18.3",
@@ -34,11 +33,11 @@
     "chai": "^4.1.1",
     "chai-as-promised": "^7.1.1",
     "colors": "^1.3.0",
-    "config": "^1.29.3",
+    "config": "^3.0.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
     "express": "^4.15.3",
-    "file-loader": "^1.1.5",
+    "file-loader": "^2.0.0",
     "geolib": "^2.0.24",
     "helmet": "^3.12.1",
     "jsonwebtoken": "^8.2.2",
@@ -49,18 +48,19 @@
     "mongodb": "^3.0.7",
     "node-fetch": "^2.1.2",
     "nodemon": "^1.17.4",
-    "sleep-promise": "^6.0.0",
-    "spdy": "^3.4.4",
-    "ts-node": "^6.1.0",
-    "typescript": "^2.9.1",
+    "sleep-promise": "^8.0.1",
+    "spdy": "^4.0.0",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.2.2",
     "url-loader": "^1.0.1",
     "uuid": "^3.2.1",
-    "winston": "^2.4.2",
+    "winston": "^3.1.0",
     "xml2js": "^0.4.19"
   },
   "_moduleAliases": {
     "lib": "dist/lib",
     "routers": "dist/routers",
+    "shared": "dist/shared",
     "test": "dist/test"
   }
 }
