--- a/app/package.json
+++ b/app/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
+    "@types/d3": "^5.5.0",
     "@types/mapbox": "^1.6.38",
     "@types/mapbox-gl": "^0.51.1",
     "@types/react-redux": "^6.0.10",
     "@types/redux-saga": "^0.10.5",
+    "d3": "^5.7.0",
     "prop-types": "^15.6.2",
     "react": "16.6.1",
     "react-native": "0.57.5",
