--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,8 @@
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
     "@types/d3": "^5.5.0",
     "@types/mapbox": "^1.6.38",
-    "@types/mapbox-gl": "^0.51.1",
-    "@types/react-redux": "^6.0.10",
+    "@types/mapbox-gl": "^0.51.3",
+    "@types/react-redux": "^6.0.12",
     "@types/redux-saga": "^0.10.5",
     "d3": "^5.7.0",
     "prop-types": "^15.6.2",
@@ -21,15 +21,16 @@
     "react-native-background-geolocation": "^2.14.2",
     "react-native-dotenv": "^0.2.0",
     "react-native-svg": "^8.0.10",
-    "react-redux": "^5.1.1",
+    "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2",
-    "util": "^0.11.1"
+    "util": "^0.11.1",
+    "victory-native": "^31.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.10",
-    "@types/react": "^16.7.8",
-    "@types/react-native": "^0.57.15",
+    "@types/jest": "^23.3.11",
+    "@types/react": "^16.7.18",
+    "@types/react-native": "^0.57.25",
     "@types/react-test-renderer": "^16.0.3",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
@@ -37,7 +38,7 @@
     "react-native-typescript-transformer": "^1.2.10",
     "react-test-renderer": "16.6.1",
     "ts-jest": "^23.10.5",
-    "typescript": "^3.1.6"
+    "typescript": "^3.2.2"
   },
   "jest": {
     "preset": "react-native",
