--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@types/d3": "^5.0.1",
+    "@types/radium": "^0.24.2",
+    "@types/victory": "^31.0.3",
     "d3": "^5.7.0",
     "d3-axis": "^1.0.12",
     "d3-ease": "^1.0.5",
@@ -12,9 +14,11 @@
     "d3-shape": "^1.2.2",
     "d3-time-format": "^2.1.3",
     "d3-zoom": "^1.7.3",
+    "radium": "^0.25.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts-ts": "3.1.0"
+    "react-scripts-ts": "3.1.0",
+    "victory": "^31.0.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
