Timeline and Timespan components in progress, using Victory

--- a/app/package.json
+++ b/app/package.json
@@ -11,8 +11,10 @@
     "@types/d3": "^5.5.0",
     "@types/mapbox": "^1.6.38",
     "@types/mapbox-gl": "^0.51.3",
+    "@types/radium": "^0.24.2",
     "@types/react-redux": "^6.0.12",
     "@types/redux-saga": "^0.10.5",
+    "@types/victory": "^31.0.3",
     "d3": "^5.7.0",
     "prop-types": "^15.6.2",
     "react": "16.6.1",
