app: Add react-native-vector-icons and update Podfile. Had build errors unless using XCode Legacy Build System, fixed after updating CocoaPods Ruby gem.

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -32,7 +32,11 @@ local.properties
 
 # node.js
 #
-node_modules/
+node_modules/**
+# TODO until official @types/victory-native is available
+# TODO This exclusion is not working, not sure why.
+!node_modules/@types/victory-native/
+
 npm-debug.log
 yarn-error.log
 
