--- a/app/ios/Podfile
+++ b/app/ios/Podfile
@@ -1,9 +1,10 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '12.0'
 
 target 'Pathify' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
+
 
   # Pods for Pathify
   # Flexbox Layout Manager Used By React Native
@@ -30,19 +31,16 @@ target 'Pathify' do
     'RCTLinkingIOS'
   ]
 
-  # Mapbox
   pod 'react-native-mapbox-gl', :path => '../node_modules/@mapbox/react-native-mapbox-gl'
-
   pod 'RNBackgroundGeolocation', :path => '../node_modules/react-native-background-geolocation'
   pod 'RNBackgroundFetch', :path => '../node_modules/react-native-background-fetch'
-
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
   target 'PathifyTests' do
     inherit! :search_paths
     # Pods for testing
   end
-
 end
 
 target 'Pathify-tvOS' do
@@ -55,5 +53,4 @@ target 'Pathify-tvOS' do
     inherit! :search_paths
     # Pods for testing
   end
-
 end
