--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "react-native-background-geolocation": "^2.14.2",
     "react-native-dotenv": "^0.2.0",
     "react-native-svg": "^8.0.10",
+    "react-native-vector-icons": "^6.1.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2",
