--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@types/mapbox": "^1.6.38",
     "@types/mapbox-gl": "^0.51.3",
     "@types/radium": "^0.24.2",
+    "@types/react-native-vector-icons": "^4.6.4",
     "@types/react-redux": "^6.0.12",
     "@types/redux-saga": "^0.10.5",
     "@types/victory": "^31.0.3",
