--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
+    "@turf/turf": "^5.1.6",
     "@types/d3": "^5.5.0",
     "@types/mapbox": "^1.6.38",
     "@types/mapbox-gl": "^0.51.3",
