--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,7 @@
     "@types/victory": "^31.0.6",
     "d3": "^5.7.0",
     "prop-types": "^15.6.2",
-    "react": "16.6.1",
+    "react": "^16.6.3",
     "react-native": "0.57.5",
     "react-native-background-fetch": "^2.4.6",
     "react-native-background-geolocation": "^2.14.2",
@@ -35,13 +35,13 @@
   "devDependencies": {
     "@types/jest": "^23.3.13",
     "@types/react": "^16.7.20",
-    "@types/react-native": "^0.57.29",
+    "@types/react-native": "^0.57.32",
     "@types/react-test-renderer": "^16.0.3",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.49.2",
     "react-native-typescript-transformer": "^1.2.11",
-    "react-test-renderer": "16.6.1",
+    "react-test-renderer": "^16.6.3",
     "ts-jest": "^23.10.5",
     "typescript": "^3.2.4"
   },
