--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
+    "@react-native-community/cli": "^1.1.0",
     "@turf/turf": "^5.1.6",
     "@types/d3": "^5.7.0",
     "@types/mapbox": "^1.6.38",
@@ -19,8 +20,8 @@
     "@types/victory": "^31.0.6",
     "d3": "^5.7.0",
     "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-native": "0.57.5",
+    "react": "16.6.3",
+    "react-native": "^0.58.0",
     "react-native-background-fetch": "^2.4.6",
     "react-native-background-geolocation": "^2.14.2",
     "react-native-dotenv": "^0.2.0",
