--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "react-native-background-fetch": "^2.4.6",
     "react-native-background-geolocation": "^2.14.2",
     "react-native-dotenv": "^0.2.0",
+    "react-native-safe-area-view-with-get-inset": "^0.10.0",
     "react-native-svg": "^9.0.3",
     "react-native-vector-icons": "^6.2.0",
     "react-redux": "^6.0.0",
