--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "**/web/build": true,
     "**/web/src/shared": true,
     "test.ts": true
-  }
+  },
+  "workbench.colorTheme": "Tomorrow Night Blue"
 }
