app: Upgrade to react-native 0.59 via new sanctioned rn-diff-purge. Add Slider and AsyncStorage packages + pods, no longer included in RN core. Had to manually fix package.json in react-native-slider due to https://github.com/react-native-community/react-native-slider/issues/21. Also had to manually remove React target which pod install should not have automatically added.

--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -137,6 +137,11 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-background-geolocation')
+    implementation project(':react-native-background-fetch')
+    implementation project(':@react-native-community_slider')
+    implementation project(':@mapbox_react-native-mapbox-gl')
+    implementation project(':@react-native-community_async-storage')
     compile project(':react-native-vector-icons')
     compile project(':react-native-svg')
     implementation fileTree(dir: "libs", include: ["*.jar"])
