--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Pathify server",
   "scripts": {
-    "build": "mkdir dist 2>/dev/null; tsc; cp -R src/config dist; echo 'built to /server/dist'",
+    "build": "rm -rf dist; mkdir dist 2>/dev/null; cp -R prisma/generated/prisma-client src; tsc; cp -R src/config dist; echo 'built to /server/dist'; ls -l dist",
     "launch": "NODE_ENV=development node dist/server.js",
     "test": "NODE_ENV=development mocha dist/test/*.js",
     "start": "echo \"launching nodemon, watching src...\"; NODE_ENV=development nodemon --watch src -e ts,json5 --exec 'echo \"rebuilding server...\"; yarn build; echo \"running tests...\"; yarn test; echo \"relaunching server...\"; yarn launch'"
@@ -23,10 +23,10 @@
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^5.2.6",
     "@types/mongodb": "^3.1.25",
-    "@types/node": "^11.13.6",
-    "@types/node-fetch": "^2.3.2",
+    "@types/node": "^11.13.7",
+    "@types/node-fetch": "^2.3.3",
     "@types/xml2js": "^0.4.4",
-    "aws-sdk": "^2.441.0",
+    "aws-sdk": "^2.443.0",
     "body-parser": "^1.18.3",
     "bunyan": "^1.8.12",
     "bunyan-middleware": "^0.8.0",
@@ -39,6 +39,7 @@
     "express": "^4.15.3",
     "file-loader": "^3.0.1",
     "geolib": "^2.0.24",
+    "graphql": "^14.2.1",
     "helmet": "^3.16.0",
     "jsonwebtoken": "^8.5.1",
     "microtime": "^3.0.0",
@@ -48,10 +49,11 @@
     "mongodb": "^3.2.3",
     "node-fetch": "^2.1.2",
     "nodemon": "^1.18.11",
+    "prisma-client-lib": "^1.30.2",
     "sleep-promise": "^8.0.1",
     "spdy": "^4.0.0",
     "ts-node": "^8.1.0",
-    "typescript": "^3.4.4",
+    "typescript": "^3.4.5",
     "url-loader": "^1.0.1",
     "uuid": "^3.2.1",
     "winston": "^3.2.1",
@@ -60,6 +62,7 @@
   "_moduleAliases": {
     "lib": "dist/lib",
     "routers": "dist/routers",
+    "prisma-client": "dist/prisma-client",
     "shared": "dist/shared",
     "test": "dist/test"
   }
