--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "include": [
-      "src/**/*"
+      "src/**/*",
   ],
   "exclude": [
   ],
@@ -59,6 +59,9 @@
         ],
         "routers/*": [
             "src/routers/*"
+        ],
+        "prisma-client/*": [
+            "src/generated/prisma-client/*"
         ],
         "shared/*": [
             "src/shared/*"
