server: Revised Prisma datamode and seed script, node packages, build scripts

--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "Pathify server",
   "scripts": {
-    "build": "rm -rf dist; mkdir dist 2>/dev/null; cp -R prisma/generated/prisma-client src; tsc; cp -R src/config dist; echo 'built to /server/dist'; ls -l dist; yarn test",
+    "clean": "rm -rf dist; mkdir dist 2>/dev/null",
+    "build": "yarn clean; cp -R prisma/generated/prisma-client src; tsc; cp -R src/config dist; echo 'built to /server/dist'; ls -l dist; yarn test",
+    "full-build": "yarn prisma-regen; yarn build",
     "launch": "NODE_ENV=development node dist/server.js",
     "test": "NODE_ENV=development mocha dist/test/*.js",
+    "prisma-regen": "pushd .; cd prisma; prisma deploy; prisma generate; popd",
+    "prisma-reset": "pushd .; cd prisma; prisma reset; prisma deploy; prisma generate; prisma seed; popd",
     "start": "echo \"launching nodemon, watching src...\"; NODE_ENV=development nodemon --watch src -e ts,json5 --exec 'echo \"rebuilding server...\"; yarn build; echo \"running tests...\"; yarn test; echo \"relaunching server...\"; yarn launch'"
   },
   "author": "Jonathan Dubman",
@@ -23,11 +27,11 @@
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^5.2.6",
     "@types/mongodb": "^3.1.25",
-    "@types/node": "^11.13.7",
+    "@types/node": "^11.13.8",
     "@types/node-fetch": "^2.3.3",
     "@types/xml2js": "^0.4.4",
-    "aws-sdk": "^2.443.0",
-    "body-parser": "^1.18.3",
+    "aws-sdk": "^2.445.0",
+    "body-parser": "^1.19.0",
     "bunyan": "^1.8.12",
     "bunyan-middleware": "^0.8.0",
     "chai": "^4.1.1",
@@ -47,9 +51,9 @@
     "mocha": "^6.1.4",
     "module-alias": "^2.2.0",
     "mongodb": "^3.2.3",
-    "node-fetch": "^2.1.2",
+    "node-fetch": "^2.4.1",
     "nodemon": "^1.18.11",
-    "prisma-client-lib": "^1.30.2",
+    "prisma-client-lib": "^1.31.2",
     "sleep-promise": "^8.0.1",
     "spdy": "^4.0.0",
     "ts-node": "^8.1.0",
