--- a/server/prisma/package.json
+++ b/server/prisma/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "graphql": "^14.2.1",
-    "prisma-client-lib": "^1.31.1"
+    "prisma-client-lib": "^1.31.1",
+    "ts-node": "^8.1.0"
   }
 }
