--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "clean": "rm -rf dist; mkdir dist 2>/dev/null",
     "build": "yarn clean; cp -R prisma/generated/prisma-client src; tsc; cp -R src/config dist; echo 'built to /server/dist'; ls -l dist; yarn test",
-    "full-build": "yarn prisma-regen; yarn build",
+    "build-and-reset-db": "yarn build; yarn prisma-force-reset",
     "launch": "NODE_ENV=development node dist/server.js",
     "test": "NODE_ENV=development mocha dist/test/*.js",
     "prisma-regen": "pushd .; cd prisma; prisma deploy; prisma generate; popd",
     "prisma-reset": "pushd .; cd prisma; prisma reset; prisma deploy; prisma generate; prisma seed; popd",
+    "prisma-force-reset": "pushd .; cd prisma; prisma reset -f; prisma deploy; prisma generate; prisma seed; popd",
     "start": "echo \"launching nodemon, watching src...\"; NODE_ENV=development nodemon --watch src -e ts,json5 --exec 'echo \"rebuilding server...\"; yarn build; echo \"running tests...\"; yarn test; echo \"relaunching server...\"; yarn launch'"
   },
   "author": "Jonathan Dubman",
@@ -26,11 +27,11 @@
     "@types/microtime": "^2.1.0",
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^5.2.6",
-    "@types/mongodb": "^3.1.25",
-    "@types/node": "^11.13.8",
+    "@types/mongodb": "^3.1.26",
+    "@types/node": "^12.0.0",
     "@types/node-fetch": "^2.3.3",
     "@types/xml2js": "^0.4.4",
-    "aws-sdk": "^2.445.0",
+    "aws-sdk": "^2.449.0",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.12",
     "bunyan-middleware": "^0.8.0",
@@ -39,21 +40,21 @@
     "colors": "^1.3.0",
     "config": "^3.1.0",
     "cookie-parser": "^1.4.4",
-    "dotenv": "^7.0.0",
+    "dotenv": "^8.0.0",
     "express": "^4.15.3",
     "file-loader": "^3.0.1",
     "geolib": "^2.0.24",
     "graphql": "^14.2.1",
-    "helmet": "^3.16.0",
+    "helmet": "^3.17.0",
     "jsonwebtoken": "^8.5.1",
     "microtime": "^3.0.0",
     "minimist": "^1.2.0",
     "mocha": "^6.1.4",
     "module-alias": "^2.2.0",
     "mongodb": "^3.2.3",
-    "node-fetch": "^2.4.1",
-    "nodemon": "^1.18.11",
-    "prisma-client-lib": "^1.31.2",
+    "node-fetch": "^2.5.0",
+    "nodemon": "^1.19.0",
+    "prisma-client-lib": "^1.30.4",
     "sleep-promise": "^8.0.1",
     "spdy": "^4.0.0",
     "ts-node": "^8.1.0",
