--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "clean": "rm -rf dist; mkdir dist 2>/dev/null",
     "clean-reset": " yarn prisma-force-reset; yarn clean",
-    "build": "yarn clean; cp -R prisma/generated/prisma-client src; tsc; cp -R src/config dist; echo 'built to /server/dist'; ls -l dist; yarn test",
+    "build": "yarn clean; cp -R prisma/generated/prisma-client src; pushd .; cd ../shared; yarn share; popd; tsc; cp -R src/config dist; echo 'built to /server/dist'; ls -l dist; yarn test",
     "build-reset": "yarn build; yarn prisma-force-reset",
     "launch": "NODE_ENV=development node dist/server.js",
     "test": "NODE_ENV=development mocha dist/test/*.js",
@@ -28,11 +28,11 @@
     "@types/microtime": "^2.1.0",
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^5.2.6",
-    "@types/mongodb": "^3.1.26",
-    "@types/node": "^12.0.0",
-    "@types/node-fetch": "^2.3.3",
+    "@types/mongodb": "^3.1.27",
+    "@types/node": "^12.0.2",
+    "@types/node-fetch": "^2.3.4",
     "@types/xml2js": "^0.4.4",
-    "aws-sdk": "^2.453.0",
+    "aws-sdk": "^2.459.0",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.12",
     "bunyan-middleware": "^0.8.0",
@@ -42,7 +42,7 @@
     "config": "^3.1.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
-    "express": "^4.15.3",
+    "express": "^4.17.0",
     "file-loader": "^3.0.1",
     "geolib": "^2.0.24",
     "graphql": "^14.3.0",
@@ -53,7 +53,7 @@
     "mocha": "^6.1.4",
     "module-alias": "^2.2.0",
     "mongodb": "^3.2.4",
-    "node-fetch": "^2.5.0",
+    "node-fetch": "^2.6.0",
     "nodemon": "^1.19.0",
     "prisma-client-lib": "^1.30.4",
     "sleep-promise": "^8.0.1",
