--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Pathify server",
   "scripts": {
-    "clean": "rm -rf dist; mkdir dist 2>/dev/null",
+    "clean": "rm -rf dist; mkdir dist 2>/dev/null; mkdir logs 2>/dev/null",
     "clean-reset": " yarn prisma-force-reset; yarn clean",
     "build": "yarn clean; cp -R prisma/generated/prisma-client src; cd ../shared; yarn share; cd ../server; tsc; cp -R src/config dist; cp -R src/secrets dist; echo 'built to /server/dist'; ls -lR dist; yarn test",
     "build-reset": "yarn build; yarn prisma-force-reset",
