--- a/server/package.json
+++ b/server/package.json
@@ -3,17 +3,22 @@
   "version": "1.0.0",
   "description": "Pathify server",
   "scripts": {
-    "clean": "rm -rf dist; mkdir dist 2>/dev/null; mkdir logs 2>/dev/null",
+    "clean": "rm -rf dist; mkdir -p dist; mkdir -p logs",
     "clean-reset": " yarn prisma-force-reset; yarn clean",
     "build": "yarn clean; cp -R prisma/generated/prisma-client src; cd ../shared; yarn share; cd ../server; tsc; cp -R src/config dist; cp -R src/secrets dist; echo 'built to /server/dist'; ls -lR dist; yarn test",
     "build-reset": "yarn build; yarn prisma-force-reset",
     "launch": "NODE_ENV=development node dist/server.js",
+    "log-trace": "tail -f logs/latest.log | bunyan -l trace",
+    "log-debug": "tail -f logs/latest.log | bunyan -l debug",
+    "log": "tail -f logs/latest.log | bunyan -l debug",
+    "log-info": "tail -f logs/latest.log | bunyan -l info",
+    "log-warn": "tail -f logs/latest.log | bunyan -l warn",
     "test": "NODE_ENV=development mocha dist/test/*.js",
     "prisma-generate": "cd prisma; prisma deploy; prisma generate; cd ..",
     "prisma-reset": "cd prisma; prisma reset; prisma deploy; prisma generate; prisma seed; cd ..",
     "prisma-force-reset": "cd prisma; prisma reset -f; prisma deploy; prisma generate; prisma seed; cd ..",
     "start-TODO": "echo \"launching nodemon, watching src...\"; NODE_ENV=development nodemon --watch src -e ts,json5 --exec 'echo \"rebuilding server...\"; yarn build; echo \"running tests...\"; echo \"relaunching server...\"; yarn launch'",
-    "start": "yarn build; yarn test; yarn launch"
+    "start": "yarn build; yarn launch"
   },
   "author": "Jonathan Dubman",
   "license": "ISC",
