--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,11 @@
     "build": "yarn clean; cp -R prisma/generated/prisma-client src; cd ../shared; yarn share; cd ../server; tsc; cp -R src/config dist; cp -R src/secrets dist; echo 'built to /server/dist'; ls -lR dist; yarn test",
     "build-reset": "yarn build; yarn prisma-force-reset",
     "launch": "NODE_ENV=development node dist/server.js",
-    "log-trace": "tail -f logs/latest.log | bunyan -l trace",
-    "log-debug": "tail -f logs/latest.log | bunyan -l debug",
-    "log": "tail -f logs/latest.log | bunyan -l debug",
-    "log-info": "tail -f logs/latest.log | bunyan -l info",
-    "log-warn": "tail -f logs/latest.log | bunyan -l warn",
+    "log-trace": "tail -f logs/complete.log | bunyan -l trace",
+    "log-debug": "tail -f logs/complete.log | bunyan -l debug",
+    "log": "tail -f logs/complete.log | bunyan -l debug",
+    "log-info": "tail -f logs/complete.log | bunyan -l info",
+    "log-warn": "tail -f logs/complete.log | bunyan -l warn",
     "test": "NODE_ENV=development mocha dist/test/*.js",
     "prisma-generate": "cd prisma; prisma deploy; prisma generate; cd ..",
     "prisma-reset": "cd prisma; prisma reset; prisma deploy; prisma generate; prisma seed; cd ..",
