--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "clean": "rm -rf dist; mkdir -p dist; mkdir -p logs",
     "clean-reset": " yarn prisma-force-reset; yarn clean",
-    "build": "yarn clean; cp -R prisma/generated/prisma-client src; cd ../shared; yarn share; cd ../server; tsc; cp -R src/config dist; cp -R src/secrets dist; echo 'built to /server/dist'; ls -lR dist; yarn test",
-    "build-reset": "yarn build; yarn prisma-force-reset",
+    "build": "yarn clean; cp -R prisma/generated/prisma-client src; cd ../shared; yarn share; cd ../server; tsc; cp -R src/config dist; cp -R src/secrets dist; echo 'built to /server/dist'",
+    "build-reset": "yarn build; yarn prisma-force-reset; yarn test",
+    "build-test": "yarn build; yarn test",
     "launch": "NODE_ENV=development node dist/pathify.js",
     "log-trace": "tail -f logs/complete.log | bunyan -l trace",
     "log-debug": "tail -f logs/complete.log | bunyan -l debug",
