--- a/server/package.json
+++ b/server/package.json
@@ -68,6 +68,7 @@
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5",
     "url-loader": "^1.0.1",
+    "util": "^0.12.0",
     "uuid": "^3.2.1",
     "winston": "^3.2.1",
     "xml2js": "^0.4.19"
