--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "@types/react-native-vector-icons": "^6.4.0",
     "@types/react-redux": "^7.0.9",
     "@types/redux-saga": "^0.10.5",
+    "@types/uuid": "^3.4.4",
     "@types/victory": "^31.0.18",
     "d3": "^5.9.2",
     "prop-types": "^15.7.2",
@@ -36,6 +37,7 @@
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
     "util": "^0.12.0",
+    "uuid": "^3.3.2",
     "victory-native": "^32.0.2"
   },
   "devDependencies": {
