Shared timeseries module: filterEvents, findEventsAtTimepoint, findEventsNearestTimepoint, EventFilter type, EventType enum, Timepoint type. Shared locations module with locEventNearestTimepoint. Unit test code for shared module.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,8 @@
 {
   "files.exclude": {
-    "**/app/shared": true,
-    "**/server/src/shared": true,
     "**/web/build": true,
-    "**/web/src/shared": true,
-    "test.ts": true
+    "app/shared/**": true,
+    "server/src/shared/**": true
   },
   "workbench.colorTheme": "Tomorrow Night Blue"
 }
