--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -69,7 +69,8 @@
         "test/*": [
             "src/test/*"
         ]
-    }
+    },
+   "compileOnSave": true,
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
     // "types": [],                           /* Type declaration files to be included in compilation. */
