Factor out tracks types and continuousTracks function from shared timeseries module into new shared tracks module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,14 @@
 {
   "files.exclude": {
+    "**/.flowconfig": true,
+    "**/app/android/**": true,
+    "**/app/ios/Pathify.xcodeproj": true,
+    "**/app/shared/**": true,
+    "**/package-lock.json": true,
+    "**/server/src/shared/**": true,
+    "**/web/**": true,
     "**/web/build": true,
-    "app/shared/**": true,
-    "server/src/shared/**": true
+    "**/yarn.lock": true
   },
   "workbench.colorTheme": "Tomorrow Night Blue"
 }
