--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
   "author": "Jonathan Dubman",
   "license": "ISC",
   "dependencies": {
+    "@turf/turf": "^5.1.6",
     "@types/body-parser": "^1.17.0",
     "@types/bunyan": "^1.8.6",
     "@types/chai": "^4.1.3",
