--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
     "@react-native-community/async-storage": "^1.5.1",
-    "@react-native-community/cli": "^1.9.4",
-    "@react-native-community/slider": "^1.1.2",
+    "@react-native-community/cli": "^2.4.1",
+    "@react-native-community/slider": "^2.0.0-rc.1",
     "@turf/turf": "^5.1.6",
     "@types/d3": "^5.7.2",
     "@types/mapbox": "^1.6.39",
@@ -25,7 +25,7 @@
     "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-devtools": "^3.6.1",
-    "react-native": "^0.59.8",
+    "react-native": "0.60.0",
     "react-native-background-fetch": "^2.5.6",
     "react-native-background-geolocation": "^3.0.5",
     "react-native-dotenv": "^0.2.0",
@@ -33,7 +33,7 @@
     "react-native-svg": "^9.4.0",
     "react-native-vector-icons": "^6.4.2",
     "react-redux": "^7.0.3",
-    "redux": "^4.0.1",
+    "redux": "^4.0.4",
     "redux-saga": "^1.0.2",
     "util": "^0.12.0",
     "uuid": "^3.3.2",
@@ -42,11 +42,11 @@
   "devDependencies": {
     "@types/jest": "^24.0.13",
     "@types/react": "^16.8.18",
-    "@types/react-native": "^0.57.58",
+    "@types/react-native": "^0.60.0",
     "@types/react-test-renderer": "^16.8.1",
     "babel-jest": "24.8.0",
     "jest": "24.8.0",
-    "metro-react-native-babel-preset": "0.54.1",
+    "metro-react-native-babel-preset": "0.55.0",
     "react-native-typescript-transformer": "^1.2.12",
     "react-test-renderer": "^16.8.6",
     "ts-jest": "^24.0.2",
