app: Save to AsyncStorage, load from AsyncStorage on startup. Post-upgrade fix to Podfile.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,11 @@
     "**/web/build": true,
     "**/yarn.lock": true,
     "app/shared/**": true,
-    "server/src/shared/**": true
+    "server/src/shared/**": true,
+    "**/.classpath": true,
+    "**/.project": true,
+    "**/.settings": true,
+    "**/.factorypath": true
   },
   "workbench.colorTheme": "Tomorrow Night Blue"
 }
