appQuery shared module defines expanded AppQueryParams with count, limit, filterTypes. Error handler for background-geolocation.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
     "**/.settings": true,
     "**/.factorypath": true
   },
-  "workbench.colorTheme": "Tomorrow Night Blue"
+  "workbench.colorTheme": "Tomorrow Night Blue",
+  "search.quickOpen.includeHistory": false
 }
