--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-devtools": "^3.6.1",
+    "react-dom": "^16.8.6",
     "react-native": "0.60.0",
     "react-native-background-fetch": "^2.5.6",
     "react-native-background-geolocation": "^3.0.5",
