--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-restart')
     implementation project(':@mapbox_react-native-mapbox-gl')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-svg')
