--- a/app/android/settings.gradle
+++ b/app/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'Pathify'
+include ':react-native-restart'
+project(':react-native-restart').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-restart/android')
 include ':@mapbox_react-native-mapbox-gl'
 project(':@mapbox_react-native-mapbox-gl').projectDir = new File(rootProject.projectDir, '../node_modules/@mapbox/react-native-mapbox-gl/android/rctmgl')
 include ':react-native-vector-icons'
