--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "react-native-background-fetch": "^2.5.6",
     "react-native-background-geolocation": "^3.0.5",
     "react-native-dotenv": "^0.2.0",
+    "react-native-restart": "^0.0.12",
     "react-native-safe-area-view-with-get-inset": "^0.10.0",
     "react-native-svg": "^9.4.0",
     "react-native-vector-icons": "^6.4.2",
