app: Green path for currentActivity to match Timespan. Fix z-order of Pulsars relative to Paths using distinct React component keys.

--- a/shared/package.json
+++ b/shared/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@turf/distance": "^6.0.1",
+    "@turf/helpers": "^6.1.4",
     "util": "^0.12.0"
   },
   "scripts": {
