--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,7 @@
     "react-native-dotenv": "^0.2.0",
     "react-native-restart": "^0.0.12",
     "react-native-safe-area-view-with-get-inset": "^0.10.0",
+    "react-native-status-bar-height": "^2.4.0",
     "react-native-svg": "^9.6.2",
     "react-native-vector-icons": "^6.4.2",
     "react-redux": "^7.0.3",
