Timeline zoom slider on clockMenu with logarithmic scale and refinements to tick formats and zoom thresholds. Fix elevation display in activitySummary.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,9 @@
   },
   "workbench.colorTheme": "Tomorrow Night Blue",
   "search.quickOpen.includeHistory": false,
-  "typescript.suggest.autoImports": false
+  "typescript.suggest.autoImports": false,
+  "search.exclude": {
+    "**/app/shared": true,
+    "**/server/src/shared": true
+  }
 }
