--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "@types/uuid": "^3.4.4",
     "@types/victory": "^31.0.21",
     "d3": "^5.9.2",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-devtools": "^3.6.3",
