New NOW button to right of clock. Update packages/pods and podfile.

--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@react-native-community/cli": "^2.9.0",
     "@react-native-community/slider": "^2.0.0",
-    "@react-native-mapbox-gl/maps": "^7.0.1",
+    "@react-native-mapbox-gl/maps": "^7.0.4",
     "@turf/distance": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "@turf/turf": "^5.1.6",
@@ -21,26 +21,26 @@
     "@types/react-native-vector-icons": "^6.4.0",
     "@types/react-redux": "^7.1.2",
     "@types/uuid": "^3.4.4",
-    "@types/victory": "^31.0.21",
-    "d3": "^5.11.0",
+    "@types/victory": "^31.0.22",
+    "d3": "^5.12.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
-    "react-devtools": "^3.6.3",
+    "react-devtools": "^4.1.0",
     "react-dom": "^16.9.0",
     "react-native": "0.60.5",
     "react-native-background-fetch": "^2.7.0",
-    "react-native-background-geolocation": "^3.2.0",
+    "react-native-background-geolocation": "^3.2.2",
     "react-native-dotenv": "^0.2.0",
-    "react-native-restart": "^0.0.12",
+    "react-native-restart": "^0.0.13",
     "react-native-safe-area-view-with-get-inset": "^0.10.0",
     "react-native-status-bar-height": "^2.4.0",
-    "react-native-svg": "9.8.4",
-    "react-native-vector-icons": "^6.4.2",
+    "react-native-svg": "9.9.4",
+    "react-native-vector-icons": "6.4.2",
     "react-redux": "^7.1.1",
-    "realm": "^2.29.2",
+    "realm": "^3.1.0",
     "redux": "^4.0.4",
-    "redux-saga": "^1.0.2",
+    "redux-saga": "^1.1.1",
     "util": "^0.12.0",
     "uuid": "^3.3.3",
     "victory-native": "^33.0.0"
@@ -48,15 +48,15 @@
   "devDependencies": {
     "@types/jest": "^24.0.18",
     "@types/react": "^16.9.2",
-    "@types/react-native": "^0.60.11",
+    "@types/react-native": "^0.60.15",
     "@types/react-test-renderer": "^16.9.0",
     "babel-jest": "24.9.0",
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.56.0",
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "^16.9.0",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.6.2"
+    "ts-jest": "^24.1.0",
+    "typescript": "^3.6.3"
   },
   "jest": {
     "preset": "react-native",
