--- a/app/ios/Podfile
+++ b/app/ios/Podfile
@@ -32,8 +32,6 @@ target 'Pathify' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  pod 'RNBackgroundGeolocation', :path => '../node_modules/react-native-background-geolocation'
-
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
@@ -47,6 +45,9 @@ target 'Pathify' do
     inherit! :search_paths
     # Pods for testing
   end
+
+  require_relative ‘../node_modules/@react-native-community/cli-platform-ios/native_modules’
+  use_native_modules!(“../”)
 
   post_install do |installer|
     installer.pods_project.targets.each do |target|
