--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,7 @@
   "description": "Pathify server",
   "scripts": {
     "clean": "rm -rf dist; mkdir -p dist; mkdir -p logs",
-    "clean-reset": " yarn prisma-force-reset; yarn clean",
-    "build": "yarn clean; cp -R prisma/generated/prisma-client src; cd ../shared; yarn share; cd ../server; tsc; cp -R src/config dist; cp -R src/secrets dist; echo 'built to /server/dist'",
-    "build-reset": "yarn build; yarn prisma-force-reset; yarn test",
+    "build": "yarn clean; cd ../shared; yarn share; cd ../server; tsc; cp -R src/config dist; cp -R src/secrets dist; echo 'built to /server/dist'",
     "build-test": "yarn build; yarn test",
     "launch": "NODE_ENV=development node dist/pathify.js",
     "log-trace": "tail -f logs/complete.log | bunyan -l trace",
@@ -15,9 +13,6 @@
     "log-info": "tail -f logs/complete.log | bunyan -l info",
     "log-warn": "tail -f logs/complete.log | bunyan -l warn",
     "test": "NODE_ENV=development mocha dist/test/*.js",
-    "prisma-generate": "cd prisma; prisma deploy; prisma generate; cd ..",
-    "prisma-reset": "cd prisma; prisma reset; prisma deploy; prisma generate; prisma seed; cd ..",
-    "prisma-force-reset": "cd prisma; prisma reset -f; prisma deploy; prisma generate; prisma seed; cd ..",
     "restart": "yarn build; yarn launch",
     "start": "yarn; yarn build-test; yarn launch"
   },
@@ -27,59 +22,56 @@
     "@turf/distance": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "@turf/turf": "^5.1.6",
-    "@types/body-parser": "^1.17.0",
+    "@types/body-parser": "^1.19.0",
     "@types/bunyan": "^1.8.6",
-    "@types/chai": "^4.1.3",
-    "@types/chai-as-promised": "^7.1.0",
-    "@types/config": "^0.0.34",
-    "@types/dotenv": "^6.1.1",
-    "@types/express": "^4.16.1",
-    "@types/jsonwebtoken": "^8.3.2",
+    "@types/chai": "^4.2.9",
+    "@types/chai-as-promised": "^7.1.2",
+    "@types/config": "^0.0.36",
+    "@types/express": "^4.17.2",
+    "@types/jsonwebtoken": "^8.3.7",
     "@types/microtime": "^2.1.0",
     "@types/minimist": "^1.2.0",
-    "@types/mocha": "^5.2.6",
-    "@types/mongodb": "^3.1.27",
-    "@types/node": "^12.0.2",
-    "@types/node-fetch": "^2.3.4",
-    "@types/xml2js": "^0.4.4",
-    "aws-sdk": "^2.459.0",
+    "@types/mocha": "^7.0.1",
+    "@types/mongodb": "^3.3.16",
+    "@types/node": "^13.7.1",
+    "@types/node-fetch": "^2.5.4",
+    "@types/xml2js": "^0.4.5",
+    "aws-sdk": "^2.619.0",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.12",
-    "bunyan-middleware": "^0.8.0",
+    "bunyan-middleware": "^1.0.0",
     "chai": "^4.1.1",
     "chai-as-promised": "^7.1.1",
-    "colors": "^1.3.0",
-    "config": "^3.1.0",
+    "colors": "^1.4.0",
+    "config": "^3.2.5",
     "cookie-parser": "^1.4.4",
-    "dotenv": "^8.0.0",
-    "express": "^4.17.0",
-    "file-loader": "^3.0.1",
-    "geolib": "^2.0.24",
-    "graphql": "^14.3.0",
-    "helmet": "^3.18.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "file-loader": "^5.0.2",
+    "geolib": "^3.2.1",
+    "graphql": "^14.6.0",
+    "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
     "microtime": "^3.0.0",
     "minimist": "^1.2.0",
-    "mocha": "^6.1.4",
-    "module-alias": "^2.2.0",
-    "mongodb": "^3.2.4",
+    "mocha": "^7.0.1",
+    "module-alias": "^2.2.2",
     "node-fetch": "^2.6.0",
-    "nodemon": "^1.19.0",
-    "prisma-client-lib": "^1.30.4",
+    "nodemon": "^2.0.2",
+    "realm": "3.6.3",
     "sleep-promise": "^8.0.1",
-    "spdy": "^4.0.0",
-    "ts-node": "^8.1.0",
-    "typescript": "^3.4.5",
-    "url-loader": "^1.0.1",
-    "util": "^0.12.0",
-    "uuid": "^3.3.2",
+    "spdy": "^4.0.1",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.7.5",
+    "url-loader": "^3.0.0",
+    "util": "^0.12.1",
+    "uuid": "^3.4.0",
     "winston": "^3.2.1",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.4.23"
   },
   "_moduleAliases": {
     "lib": "dist/lib",
     "routers": "dist/routers",
-    "prisma-client": "dist/prisma-client",
     "shared": "dist/shared",
     "test": "dist/test"
   }
