--- a/app/android/settings.gradle
+++ b/app/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'Pathify'
+include ':realm'
+project(':realm').projectDir = new File(rootProject.projectDir, '../node_modules/realm/android')
 include ':react-native-restart'
 project(':react-native-restart').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-restart/android')
 include ':@react-native-community_slider'
